United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6580131 CompiledMethodLoad events don't produce the expected extra notifications to describe inlining
6580131 : CompiledMethodLoad events don't produce the expected extra notifications to describe inlining

Details
Type:
Bug
Submit Date:
2007-07-12
Status:
Resolved
Updated Date:
2010-04-02
Project Name:
JDK
Resolved Date:
2010-02-09
Component:
hotspot
OS:
solaris_9
Sub-Component:
jvmti
CPU:
sparc
Priority:
P3
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
The spec for JVMTI says or implies that CompiledMethodLoad should generate extra events to describe the inlining in a piece of compiled code.  Currently we don't do this which really limits the amount of information available for methods with heavy inlining.  We should probably be producing the extra events, assuming that existing tools don't barf when they get them.

                                    

Comments
EVALUATION

ChangeSet=http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/7fbf850d87b7,ChangeRequest=6580131
                                     
2010-01-28
EVALUATION

http://hg.openjdk.java.net/jdk6/jdk6/hotspot/rev/7fbf850d87b7
                                     
2010-01-20
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/7fbf850d87b7
                                     
2010-01-20
EVALUATION

ChangeSet=http://hg.openjdk.java.net/jdk7/tl/jdk/rev/b19cd193245e,ChangeRequest=6580131
                                     
2010-01-20
EVALUATION

ChangeSet=http://hg.openjdk.java.net/jdk6/jdk6/jdk/rev/6073840fbd22,ChangeRequest=6580131
                                     
2010-01-20
SUGGESTED FIX

See the attached 6580131-webrev-cr0.tgz file for the proposed fix.
This is the OpenJDK6 version of the fix.
                                     
2010-01-08
EVALUATION

The folks at AMD Labs have been kind enough to provide an
extension to the JVM/TI CompileMethodLoad event in order
to provide additional information about in-lining. This
extension uses the existing (but previously unused)
compile_info paramter:

http://java.sun.com/javase/6/docs/platform/jvmti/jvmti.html#CompiledMethodLoad

Vasanth and company provided the HotSpot code changes and
the original demo program.

I'm listed as the RE for this bug, but I just did the Makefile
changes to export the new jvmticmlr.h file in the HotSpot repo
and the integration of the demo program into JAVA_HOME/demo/jvmti
in the JDK repo. I'm also handling the CCC request for getting
the jvmticmlr.h file added.
                                     
2010-01-08



Hardware and Software, Engineered to Work Together