6580131: 3/4 CompiledMethodLoad events don't produce the expected extra notifications to describe inlining

Add support for additional implementation specific info to the JVM/TI CompiledMethodLoad event via the compile_info parameter.

Reviewed-by: never, ohair, tbell, tdeneau